--- a/SuperHeroSightingsProject/SuperHeroSightings/pom.xml
+++ b/SuperHeroSightingsProject/SuperHeroSightings/pom.xml
@@ -16,6 +16,12 @@
   <description>Demo project for Spring Boot</description>
   <properties>
     <java.version>11</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+    <junit.jupiter.version>5.9.1</junit.jupiter.version>
+    <junit.platform.version>1.9.1</junit.platform.version>
+      <maven.test.skip>true</maven.test.skip>
   </properties>
   <dependencies>
     <dependency>
@@ -57,6 +63,22 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M1</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>1.3.0</version>
+        <configuration>
+          <project>myproject</project>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>com.heroku.sdk</groupId>
