--- a/SuperHeroSightingsProject/SuperHeroSightings/src/main/resources/application-mysql.properties
+++ b/SuperHeroSightingsProject/SuperHeroSightings/src/main/resources/application-mysql.properties
@@ -1,8 +1,8 @@
 #database.init, supports mysql too
 database=mysql
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasourcce.password=${MYSQL_PASS:}
+#spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost}
+#spring.datasource.username=${MYSQL_USER:root}
+#spring.datasourcce.password=${MYSQL_PASS:}
 spring.datasource.initialization.mode=always
 
 
